[gd_scene load_steps=3 format=3 uid="uid://b3wnv6qvc3exq"]

[ext_resource type="Theme" uid="uid://b7xxrd3l5ge4" path="res://Interface/Default.tres" id="1_xcdt5"]
[ext_resource type="Script" path="res://Interface/Widgets/HSliderEdit/HSliderEdit.gd" id="2_whqxh"]

[node name="HSliderEdit" type="HBoxContainer"]
theme = ExtResource("1_xcdt5")
script = ExtResource("2_whqxh")

[node name="HSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 50.0
rounded = true
scrollable = false
tick_count = 5

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "100%"
alignment = 1
max_length = 4

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
